dataset1235/2025-2/2868285114/users/2008605748/executions/3071719669_2086141900.log
== SUBMISSION (2025-08-28 22:40:44)
-- CODE: 
from math import *
lados = float(input())
ap = lados/(2*tan(pi/9))
a = (9/2)*lados*ap
print(round(a,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
---- user output:
154.55
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
---- user output:
98.91
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
---- user output:
222.55
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
---- user output:
24.73
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
---- user output:
302.91
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
---- user output:
55.64
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:41:55)
-- CODE: 
from math import *
lados = float(input(" "))
ap = (lados /(2*tan(pi/9)))
a = (9/2)* lados * ap
print(round(a,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
---- user output:
154.55
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
---- user output:
98.91
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
---- user output:
222.55
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
---- user output:
24.73
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
---- user output:
302.91
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
---- user output:
55.64
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:41:56)
-- CODE: 
from math import *
lados = float(input(" "))
ap = (lados /(2*tan(pi/9)))
a = (9/2)* lados * ap
print(round(a,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
---- user output:
154.55
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
---- user output:
98.91
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
---- user output:
222.55
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
---- user output:
24.73
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
---- user output:
302.91
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
---- user output:
55.64
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:37:42)
-- CODE: 
from math import *
lados = float(input())
ap = lados/(2*tan(pi/7))
a = (7/2)*lados*ap
print(round)(a,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
File "XXXX", line 5
    print(round)(a,2))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
File "XXXX", line 5
    print(round)(a,2))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
File "XXXX", line 5
    print(round)(a,2))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
File "XXXX", line 5
    print(round)(a,2))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
File "XXXX", line 5
    print(round)(a,2))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
File "XXXX", line 5
    print(round)(a,2))
                     ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:40:54)
-- CODE: 
from math import *
lados = float(input(" "))
ap = lados/(2*tan(pi/9))
a = (9/2)*lados*ap
print(round(a,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
---- user output:
154.55
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
---- user output:
98.91
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
---- user output:
222.55
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
---- user output:
24.73
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
---- user output:
302.91
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
---- user output:
55.64
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:41:50)
-- CODE: 
from math import *
lados = float(input(" "))
ap = (lados /(2*tan(pi/9)))
a = (9/2)*lados * ap
print(round(a,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
---- user output:
154.55
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
---- user output:
98.91
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
---- user output:
222.55
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
---- user output:
24.73
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
---- user output:
302.91
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
---- user output:
55.64
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:38:56)
-- CODE: 
from math import *
lados = float(input(" "))
ap = lados/(2*tan(pi/7))
a = (7/2)*lados*ap
print(round(a,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
---- user output:
90.85
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
---- user output:
58.14
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
---- user output:
130.82
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
---- user output:
14.54
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
---- user output:
178.06
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
---- user output:
32.71
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:37:25)
-- CODE: 
from math import *
lados = float(input())
ap = lados/(2*tan(pi/7))
a = (7/2)*lados*ap
print(round9(a,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round9(a,2))
          ^^^^^^
NameError: name 'round9' is not defined. Did you mean: 'round'?
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round9(a,2))
          ^^^^^^
NameError: name 'round9' is not defined. Did you mean: 'round'?
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round9(a,2))
          ^^^^^^
NameError: name 'round9' is not defined. Did you mean: 'round'?
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round9(a,2))
          ^^^^^^
NameError: name 'round9' is not defined. Did you mean: 'round'?
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round9(a,2))
          ^^^^^^
NameError: name 'round9' is not defined. Did you mean: 'round'?
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round9(a,2))
          ^^^^^^
NameError: name 'round9' is not defined. Did you mean: 'round'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:41:15)
-- CODE: 
from math import *
lados = float(input(" "))
ap = (lados/(2*tan(pi/9)))
a = (9/2)*lados*ap
print(round(a,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
---- user output:
154.55
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
---- user output:
98.91
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
---- user output:
222.55
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
---- user output:
24.73
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
---- user output:
302.91
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
---- user output:
55.64
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:39:50)
-- CODE: 
from math import *
lados = float(input())
ap = lados/(2*tan(pi/7))
a = (7/2)*lados*ap
print(round(a,2))
-- EXECUTION TIME: 
0.0133333
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
---- user output:
90.85
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
---- user output:
58.14
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
---- user output:
130.82
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
---- user output:
14.54
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
---- user output:
178.06
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
---- user output:
32.71
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:37:21)
-- CODE: 
from math import *
lados = float(input())
ap = lados/(2*tan(pi/7))
a = (7/2)*lados*ap
print(round9(a,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round9(a,2))
          ^^^^^^
NameError: name 'round9' is not defined. Did you mean: 'round'?
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round9(a,2))
          ^^^^^^
NameError: name 'round9' is not defined. Did you mean: 'round'?
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round9(a,2))
          ^^^^^^
NameError: name 'round9' is not defined. Did you mean: 'round'?
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round9(a,2))
          ^^^^^^
NameError: name 'round9' is not defined. Did you mean: 'round'?
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round9(a,2))
          ^^^^^^
NameError: name 'round9' is not defined. Did you mean: 'round'?
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round9(a,2))
          ^^^^^^
NameError: name 'round9' is not defined. Did you mean: 'round'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:40:34)
-- CODE: 
from math import *
lados = float(input())
ap = lados/(2*tan(pi/7))
a = (9/2)*lados*ap
print(round(a,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
---- user output:
116.8
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
---- user output:
74.75
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
---- user output:
168.2
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
---- user output:
18.69
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
---- user output:
228.94
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
---- user output:
42.05
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:39:25)
-- CODE: 
from math import *
lados = float(input(" "))
ap = lados/(2*tan(pi/7))
a = (7/2)*lados*ap
print(round(a,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
---- user output:
90.85
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
---- user output:
58.14
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
---- user output:
130.82
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
---- user output:
14.54
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
---- user output:
178.06
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
---- user output:
32.71
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:37:27)
-- CODE: 
from math import *
lados = float(input())
ap = lados/(2*tan(pi/7))
a = (7/2)*lados*ap
print(round9(a,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round9(a,2))
          ^^^^^^
NameError: name 'round9' is not defined. Did you mean: 'round'?
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round9(a,2))
          ^^^^^^
NameError: name 'round9' is not defined. Did you mean: 'round'?
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round9(a,2))
          ^^^^^^
NameError: name 'round9' is not defined. Did you mean: 'round'?
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round9(a,2))
          ^^^^^^
NameError: name 'round9' is not defined. Did you mean: 'round'?
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round9(a,2))
          ^^^^^^
NameError: name 'round9' is not defined. Did you mean: 'round'?
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round9(a,2))
          ^^^^^^
NameError: name 'round9' is not defined. Did you mean: 'round'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:41:56)
-- CODE: 
from math import *
lados = float(input(" "))
ap = (lados /(2*tan(pi/9)))
a = (9/2)* lados * ap
print(round(a,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
---- user output:
154.55
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
---- user output:
98.91
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
---- user output:
222.55
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
---- user output:
24.73
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
---- user output:
302.91
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
---- user output:
55.64
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:39:23)
-- CODE: 
from math import *
lados = float(input(" "))
ap = lados/(2*tan(pi/7))
a = (7/2)*lados*ap
print(round(a,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
---- user output:
90.85
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
---- user output:
58.14
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
---- user output:
130.82
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
---- user output:
14.54
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
---- user output:
178.06
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
---- user output:
32.71
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:36:56)
-- CODE: 
from math import *
lados = float(input(""))
ap = lados/(2*tan(pi/7))
a = (7/2)*lados*ap
print(round9(a,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round9(a,2))
          ^^^^^^
NameError: name 'round9' is not defined. Did you mean: 'round'?
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round9(a,2))
          ^^^^^^
NameError: name 'round9' is not defined. Did you mean: 'round'?
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round9(a,2))
          ^^^^^^
NameError: name 'round9' is not defined. Did you mean: 'round'?
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round9(a,2))
          ^^^^^^
NameError: name 'round9' is not defined. Did you mean: 'round'?
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round9(a,2))
          ^^^^^^
NameError: name 'round9' is not defined. Did you mean: 'round'?
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round9(a,2))
          ^^^^^^
NameError: name 'round9' is not defined. Did you mean: 'round'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:42:22)
-- CODE: 
from math import *
lados = float(input(" "))
ap = (lados /(2*tan(pi/11)))
a = (11/2)* lados * ap
print(round(a,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
---- user output:
234.14
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
---- user output:
149.85
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
---- user output:
337.16
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
---- user output:
37.46
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
---- user output:
458.92
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
---- user output:
84.29
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:37:22)
-- CODE: 
from math import *
lados = float(input())
ap = lados/(2*tan(pi/7))
a = (7/2)*lados*ap
print(round9(a,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round9(a,2))
          ^^^^^^
NameError: name 'round9' is not defined. Did you mean: 'round'?
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round9(a,2))
          ^^^^^^
NameError: name 'round9' is not defined. Did you mean: 'round'?
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round9(a,2))
          ^^^^^^
NameError: name 'round9' is not defined. Did you mean: 'round'?
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round9(a,2))
          ^^^^^^
NameError: name 'round9' is not defined. Did you mean: 'round'?
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round9(a,2))
          ^^^^^^
NameError: name 'round9' is not defined. Did you mean: 'round'?
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round9(a,2))
          ^^^^^^
NameError: name 'round9' is not defined. Did you mean: 'round'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:41:42)
-- CODE: 
from math import *
lados = float(input(" "))
ap = (lados /(2*tan(pi/9)))
a = (9/2)*lados*ap
print(round(a,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
---- user output:
154.55
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
---- user output:
98.91
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
---- user output:
222.55
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
---- user output:
24.73
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
---- user output:
302.91
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
---- user output:
55.64
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:37:54)
-- CODE: 
from math import *
lados = float(input())
ap = lados/(2*tan(pi/7))
a = (7/2)*lados*ap
print(round(a,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
---- user output:
90.85
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
---- user output:
58.14
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
---- user output:
130.82
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
---- user output:
14.54
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
---- user output:
178.06
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
---- user output:
32.71
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:36:55)
-- CODE: 
from math import *
lados = float(input(""))
ap = lados/(2*tan(pi/7))
a = (7/2)*lados*ap
print(round9(a,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round9(a,2))
          ^^^^^^
NameError: name 'round9' is not defined. Did you mean: 'round'?
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round9(a,2))
          ^^^^^^
NameError: name 'round9' is not defined. Did you mean: 'round'?
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round9(a,2))
          ^^^^^^
NameError: name 'round9' is not defined. Did you mean: 'round'?
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round9(a,2))
          ^^^^^^
NameError: name 'round9' is not defined. Did you mean: 'round'?
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round9(a,2))
          ^^^^^^
NameError: name 'round9' is not defined. Did you mean: 'round'?
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round9(a,2))
          ^^^^^^
NameError: name 'round9' is not defined. Did you mean: 'round'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:37:44)
-- CODE: 
from math import *
lados = float(input())
ap = lados/(2*tan(pi/7))
a = (7/2)*lados*ap
print(round)(a,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
File "XXXX", line 5
    print(round)(a,2))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
File "XXXX", line 5
    print(round)(a,2))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
File "XXXX", line 5
    print(round)(a,2))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
File "XXXX", line 5
    print(round)(a,2))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
File "XXXX", line 5
    print(round)(a,2))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
File "XXXX", line 5
    print(round)(a,2))
                     ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:41:28)
-- CODE: 
from math import *
lados = float(input(" "))
ap = (lados /(2*tan(pi/9)))
a = (9/2)*lados*ap
print(round(a,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
---- user output:
154.55
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
---- user output:
98.91
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
---- user output:
222.55
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
---- user output:
24.73
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
---- user output:
302.91
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
---- user output:
55.64
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:37:28)
-- CODE: 
from math import *
lados = float(input())
ap = lados/(2*tan(pi/7))
a = (7/2)*lados*ap
print(round9(a,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round9(a,2))
          ^^^^^^
NameError: name 'round9' is not defined. Did you mean: 'round'?
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round9(a,2))
          ^^^^^^
NameError: name 'round9' is not defined. Did you mean: 'round'?
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round9(a,2))
          ^^^^^^
NameError: name 'round9' is not defined. Did you mean: 'round'?
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round9(a,2))
          ^^^^^^
NameError: name 'round9' is not defined. Did you mean: 'round'?
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round9(a,2))
          ^^^^^^
NameError: name 'round9' is not defined. Did you mean: 'round'?
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round9(a,2))
          ^^^^^^
NameError: name 'round9' is not defined. Did you mean: 'round'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:39:24)
-- CODE: 
from math import *
lados = float(input(" "))
ap = lados/(2*tan(pi/7))
a = (7/2)*lados*ap
print(round(a,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
---- user output:
90.85
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
---- user output:
58.14
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
---- user output:
130.82
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
---- user output:
14.54
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
---- user output:
178.06
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
---- user output:
32.71
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:39:49)
-- CODE: 
from math import *
lados = float(input())
ap = lados/(2*tan(pi/7))
a = (7/2)*lados*ap
print(round(a,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
---- user output:
90.85
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
---- user output:
58.14
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
---- user output:
130.82
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
---- user output:
14.54
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
---- user output:
178.06
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
---- user output:
32.71
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:41:43)
-- CODE: 
from math import *
lados = float(input(" "))
ap = (lados /(2*tan(pi/9)))
a = (9/2)*lados*ap
print(round(a,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
---- user output:
154.55
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
---- user output:
98.91
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
---- user output:
222.55
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
---- user output:
24.73
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
---- user output:
302.91
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
---- user output:
55.64
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:41:13)
-- CODE: 
from math import *
lados = float(input(" "))
ap = (lados/(2*tan(pi/9)))
a = (9/2)*lados*ap
print(round(a,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
---- user output:
154.55
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
---- user output:
98.91
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
---- user output:
222.55
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
---- user output:
24.73
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
---- user output:
302.91
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
---- user output:
55.64
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:41:50)
-- CODE: 
from math import *
lados = float(input(" "))
ap = (lados /(2*tan(pi/9)))
a = (9/2)*lados * ap
print(round(a,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
---- user output:
154.55
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
---- user output:
98.91
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
---- user output:
222.55
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
---- user output:
24.73
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
---- user output:
302.91
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
---- user output:
55.64
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:37:20)
-- CODE: 
from math import *
lados = float(input())
ap = lados/(2*tan(pi/7))
a = (7/2)*lados*ap
print(round9(a,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round9(a,2))
          ^^^^^^
NameError: name 'round9' is not defined. Did you mean: 'round'?
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round9(a,2))
          ^^^^^^
NameError: name 'round9' is not defined. Did you mean: 'round'?
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round9(a,2))
          ^^^^^^
NameError: name 'round9' is not defined. Did you mean: 'round'?
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round9(a,2))
          ^^^^^^
NameError: name 'round9' is not defined. Did you mean: 'round'?
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round9(a,2))
          ^^^^^^
NameError: name 'round9' is not defined. Did you mean: 'round'?
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round9(a,2))
          ^^^^^^
NameError: name 'round9' is not defined. Did you mean: 'round'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:41:49)
-- CODE: 
from math import *
lados = float(input(" "))
ap = (lados /(2*tan(pi/9)))
a = (9/2)*lados * ap
print(round(a,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
---- user output:
154.55
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
---- user output:
98.91
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
---- user output:
222.55
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
---- user output:
24.73
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
---- user output:
302.91
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
---- user output:
55.64
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
